Fix date-picker z-index & language!

--- a/client/styles/components/thumbnails.styl
+++ b/client/styles/components/thumbnails.styl
@@ -19,7 +19,7 @@ horizontal-meter-theme(color)
   position relative; float left
   margin-bottom 4px; overflow hidden
   border-radius 2px
-  z-index 999
+  z-index 9
   /*outline: rgba(0, 0, 0, 0.1) solid 2px*/
   &.click-enabled
     cursor pointer
